fix(style): form element vertical align issue

--- a/style/components/form.less
+++ b/style/components/form.less
@@ -233,7 +233,8 @@ form {
   }
 
   .@{css-prefix}radio-inline,
-  .@{css-prefix}checkbox-inline {
+  .@{css-prefix}checkbox-inline,
+  .@{css-prefix}input {
     vertical-align: top;
   }
 }
